--- a/Project.toml
+++ b/Project.toml
@@ -4,10 +4,9 @@ authors = ["Mathieu Tanneau"]
 
 [deps]
 Cbc = "9961bab8-2fa3-5c5a-9d89-47fab24efd76"
-ExcelReaders = "c04bee98-12a5-510c-87df-2a230cb6e075"
+DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 GLPK = "60bf3e95-4087-53dc-ae20-288a0d20c6a6"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
-JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
